optimization works but not optimizes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,6 @@ project(test)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(test graf.cpp hash.cpp quick_sort.cpp)
+add_executable(test quick_sort.cpp)
 
+set(CMAKE_CXX_FLAGS "-O0")
