--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,6 @@ project(test)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(test hash.cpp)
+add_executable(test hash.cpp prime.cpp)
 
 set(CMAKE_CXX_FLAGS "-O0")
