--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,8 @@ jobs:
 
       - name: test
         run: |
+          echo ${{ github.event_name }}
           ls -al .
           find .
+          
 
