--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,13 +11,13 @@ jobs:
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-  path_test:
+  reqtest:
 
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
-        os: [ ubuntu-latest, windows-latest, macos-latest ]
+        os: [ ubuntu-latest ]
         python-version: [ "3.10"]
 
     steps:
@@ -32,6 +32,7 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: path test
+    - name: requirements test
       run: |
-        python path_test.py
+        python -m pip install -U pip
+        python -m pip install -r requirements.txt
